tests/miniJava/pos/001247_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( java ) while ( 0 ) { } } }
