tests/miniJava/neg/000325_mutation.MiniJava
class java { public static void Main ( public [ ] java ) { { } } }
